[gd_scene load_steps=14 format=3 uid="uid://djnlwc04h87pc"]

[ext_resource type="Script" path="res://Scripts/tela_inicial.gd" id="1_j2g0h"]
[ext_resource type="Texture2D" uid="uid://cx3p12o0dmmim" path="res://assets/telainicial.jpg" id="1_maomo"]
[ext_resource type="Texture2D" uid="uid://dthd81eblqsf" path="res://assets/SALVE-O-MEIO-AMBIENTE-LOGO (1).png" id="2_bosqj"]
[ext_resource type="Theme" uid="uid://665c8xr3ikdj" path="res://temabotao.tres" id="3_hmcai"]
[ext_resource type="Texture2D" uid="uid://r8lth0uvncmy" path="res://assets/Sprite Pack 7/2 - Holly/mochiCaindo.png" id="4_7er5f"]
[ext_resource type="Shader" path="res://Shaders/transicao.gdshader" id="6_1i7bx"]
[ext_resource type="Script" path="res://Scripts/transicao.gd" id="6_5edve"]
[ext_resource type="Script" path="res://Scripts/color_rect.gd" id="8_nl81g"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wjokg"]

[sub_resource type="Animation" id="Animation_0k421"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("fundo:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.43595, 153.264)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/HBoxContainer/mochi:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ujh3t"]
resource_name = "reveal"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("fundo:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.7),
"transitions": PackedFloat32Array(1.41421, 1),
"update": 0,
"values": [Vector2(-1000, 153.264), Vector2(1.43595, 153.264)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/HBoxContainer/mochi:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.7, 1.1),
"transitions": PackedFloat32Array(0.707107, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bt4sy"]
_data = {
"RESET": SubResource("Animation_0k421"),
"reveal": SubResource("Animation_ujh3t")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gdjm2"]
shader = ExtResource("6_1i7bx")
shader_parameter/lines = 10.0
shader_parameter/threshold = 0.0
shader_parameter/line_color_a = Color(6.73831e-07, 0.974087, 0.46004, 1)
shader_parameter/line_color_b = Color(0.719593, 0.895324, 0, 1)

[node name="TelaInicial" type="Control"]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 2.035
offset_bottom = -331.2
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.696402, 0.567649)
size_flags_horizontal = 4
script = ExtResource("1_j2g0h")
next_scene = "res://Cenas/fase_1.tscn"

[node name="fundo" type="TextureRect" parent="."]
layout_mode = 2
offset_left = 1.43594
offset_right = 1514.44
offset_bottom = 849.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.757999, 1.24464)
texture = ExtResource("1_maomo")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00717976
anchor_top = 0.438108
anchor_right = 1.25968
anchor_bottom = 0.438108
offset_left = 1.43595
offset_top = 153.264
offset_right = 5011.44
offset_bottom = 531.264
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.14338, 1.78862)
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="logo" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("2_bosqj")

[node name="start_btn" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_hmcai")
text = "COMEÃ‡AR"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_wjokg")

[node name="credits_btn" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_hmcai")
text = "CREDITOS"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_wjokg")

[node name="quit_btn" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_hmcai")
text = "SAIR DO JOGO"

[node name="mochi" type="TextureRect" parent="MarginContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("4_7er5f")
expand_mode = 2
flip_h = true

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bt4sy")
}
autoplay = "reveal"

[node name="transicao" type="CanvasLayer" parent="."]
script = ExtResource("6_5edve")

[node name="color_rect" type="ColorRect" parent="transicao"]
material = SubResource("ShaderMaterial_gdjm2")
offset_top = 1.0
offset_right = 799.0
offset_bottom = 600.0
script = ExtResource("8_nl81g")

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/start_btn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/credits_btn" to="." method="_on_credits_btn_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/quit_btn" to="." method="_on_quit_btn_pressed"]
